--- a/qManagement/accounts/templates/accounts/dashboard_teacher.html
+++ b/qManagement/accounts/templates/accounts/dashboard_teacher.html
@@ -4,9 +4,8 @@
 
 
 <br/>
-<div class="container">
-  Dashboard Teacher
-</div>
+
+<a href="{% url 'classPage' %}">Go to Classes</a>
 
 
 {% endblock %}
