--- a/qManagement/accounts/templates/accounts/base.html
+++ b/qManagement/accounts/templates/accounts/base.html
@@ -6,6 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Quiz Management</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <style>
+      .carousel-control-next-icon, .carousel-control-prev-icon {
+        background-color: #e7cb00 !important;
+      }
+
+      .rec {
+        border-bottom: 5px solid #e7cb00;
+        padding-left: 20px;
+        width: 50px;
+        display:block;
+      }
+
+      .carousel-caption {
+        margin-bottom: 10%;
+      }
+    </style>
   </head>
   <body>
       {% block landing %}
@@ -39,8 +55,8 @@
   </div>
 </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 <script>
   document.getElementById('continueBtn').addEventListener('click', function() {
    var selectedOption = document.querySelector('input[name="btnradio"]:checked');
@@ -51,6 +67,7 @@
       window.location.href = "/registerStudent";
    }
   });
+
 </script>
 
   </body>
