--- a/qManagement/accounts/templates/accounts/main.html
+++ b/qManagement/accounts/templates/accounts/main.html
@@ -4,13 +4,52 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Customer Management</title>
+    <link rel="icon" href="{% static 'images/logotab.png' %}" style="height: 40px; width: auto;" type="image/x-icon">
+    <title>Quizzbee</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="{% static '/css/main.css' %}" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
+    <link rel="stylesheet" href="{% static '/css/main.css' %}" type="text/css">
+    <style>
+      .grid-container {
+       display: grid;
+       grid-template-columns: repeat(4, 1fr);
+       gap: 15px;
+      }
+
+      .grid-item {
+       padding: 15px;
+      }
+
+      .classGrid:hover {
+        background-color: #dfa803 !important;
+        transition: 0.2s ease-in
+      }
+
+      a {
+        text-decoration: none;
+        color: #ffc107;
+      }
+
+      .wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+      }
+      .container {
+    flex: 1;
+}
+.footer-hr {
+  opacity: 0.1;
+}
+
+    </style>
   </head>
   <body>
+  <div class="wrapper">
+
+
     {% include 'accounts/navbar.html' %}
     <div class="container">
         {% block content %}
@@ -18,8 +57,24 @@
         {% endblock %}
     </div>
 
-    <hr/>
-    <h5>Footer</h5>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  </body>
+    <hr class="footer-hr"/>
+      <div class="footer">
+        <div class="container">
+        <div class="row d-flex justify-content-between align-items-center">
+          <div class="col-auto d-block justify-content-center align-items-center">
+              <p class ="mb-0 pb-0">Jerry S. Ale</p>
+              <p>Master in Information Technology 1</p>
+          </div>
+          <div class="col-auto d-flex justify-content-center align-items-center">
+              <p>Cebu Institute of Technology University - CIT U</p>
+          </div>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+    </body>
 </html>
