--- a/qManagement/createQuiz/templates/createQuiz/classes.html
+++ b/qManagement/createQuiz/templates/createQuiz/classes.html
@@ -12,7 +12,7 @@
 </nav>
 <div class="container">
     <div class="grid-container">
-        <a href="{% url 'createClass' %}" class="classGrid grid-item bg-warning py-3 d-flex align-items-center justify-content-center text-white fs-4 pointer text-decoration-none rounded-4">
+        <a href="{% url 'createClass' %}" class="classGrid grid-item bg-secondary py-3 d-flex align-items-center justify-content-center text-white fs-4 pointer text-decoration-none rounded-4">
              <div class="me-2"><i class="fa fa-plus"></i></div> <br>
              <div class="ml-2">Create Class</div>
         </a>
