--- a/qManagement/createQuiz/templates/createQuiz/createClass.html
+++ b/qManagement/createQuiz/templates/createQuiz/createClass.html
@@ -32,7 +32,7 @@
       <input type="text" name="enrollKey"  class="form-control" id="floatingInput4" placeholder="Enrollment Key" required value="{{ random_string }}">
       <label for="floatingInput4">Enrollment Key</label>
     </div>
-
+    <a href="{% url 'classPage' %}" class="btn btn-secondary text-white">Cancel</a>
     <button type="submit" class="btn btn-warning text-white">Create</button>
   </form>
 
