--- a/qManagement/createQuiz/templates/createQuiz/classes.html
+++ b/qManagement/createQuiz/templates/createQuiz/classes.html
@@ -22,7 +22,7 @@
                 <a href="{% url 'classInfo' row.0 %}" class= " pointer" style="text-decoration: none;">
                     <div class="classGrid grid-item bg-warning py-3 rounded-4">
                         <h4 class="my-0 text-white">{{row.1}}</h4>
-                        <p class="my-0 text-dark">{{row.2}}</p>
+                        <p class="my-0 text-dark">{{row.2|truncatechars:65}}</p>
                         <p class="my-0 text-dark">{{row.3}}</p>
                     </div>
                 </a>
